--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ header > p {
     font-family: var(--fonte-padrao);
     max-width: 500px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     padding: 0px 10px;
     font-size: 1.2em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.377);
