--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ header > h1 {
     font-family: var(--fonte-destaque);
     font-size: 3em;
     font-weight: normal;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
@@ -58,7 +58,8 @@ header > p {
     max-width: 500px;
     margin: auto;
     padding-bottom: 20px;
-    padding: 0px 10px;
+    padding-right: 10px;
+    padding-left: 10px;
     font-size: 1.2em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.377);
 }
